PR 50997 David Binderman: fix format strings